--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -21,7 +21,7 @@
     </div>
 
     <script>
-        const socket = io('http://localhost:3001')
+        const socket = io('http://192.168.10.7:3001')
         socket.on('connection')
         socket.on('message', message => {
             let messagesDiv = document.getElementById('messages')
