--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
             let obj = {
                 nickname: value
             }
-            sendHttpRequest('POST', 'http://localhost:3001/setNickName', obj)
+            sendHttpRequest('POST', 'http://192.168.10.7:3001/setNickName', obj)
             .then(responseData => {
                 console.log(responseData)
                 document.getElementById('chatButton').click()
